package Models;

public class AccountEmpresa extends Account {

    public AccountEmpresa(String accountNumber, String name, String email, String passwordHash, String cnpj) {
        super(accountNumber, name, email, passwordHash);
    }
}
